--- a/css/style.css
+++ b/css/style.css
@@ -115,15 +115,22 @@ header .navbar ul li a{
   text-align: center;
 }
 
-.why_choose_us .icon_box{
+.why_choose_us .icon_box {
   display: inline-block;
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
   border: 3px solid #fff212;
+  font-size: 28px;
+  line-height: 55px;
+  text-align: center;
 }
 .why_choose_us h2{
   font-size: 1.2rem;
   margin-top: 1rem;
+}
+
+.page_title_sec{
+  border-bottom: 1px solid rgba(0,0,0,.2);
 }
 
 
